[package]
name = "embassy-am2302"
version = "0.3.0"
edition = "2024"
authors = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
build = false
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
license = "GPL-2.0-or-later"
description = "Driver async no_std pour le capteur AM2302 (DHT22), calibrable par seuil, compatible toutes cartes via embedded-hal."
repository = "https://github.com/jorgeandrecastro/embassy-am2302"
documentation = "https://docs.rs/embassy-am2302"
readme = "README.md"
keywords = ["embassy", "am2302", "dht22", "no-std", "embedded"]
categories = ["embedded", "no-std", "hardware-support"]

[lib]
name = "embassy_am2302"
path = "src/lib.rs"

[dependencies.embedded-hal]
version = "1.0"

[dependencies.embedded-hal-async]
version = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true