[package]
name          = "embassy-am2302"
version       = "0.6.1"
edition       = "2024"
authors       = ["Jorge Andre Castro <georgeandrec@gmail.com>"]
license       = "GPL-2.0-or-later"
description   = "Driver async no_std pour le capteur AM2302 (DHT22), basé sur Embassy."
repository    = "https://github.com/jorgeandrecastro/embassy-am2302"
documentation = "https://docs.rs/embassy-am2302"
readme        = "README.md"
keywords      = ["embassy", "am2302", "dht22", "no-std", "embedded"]
categories    = ["embedded", "no-std", "hardware-support"]

build        = false
autolib      = false
autobins     = false
autoexamples = false
autotests    = false
autobenches  = false

[lib]
name = "embassy_am2302"
path = "src/lib.rs"

[dependencies]
embassy-time  = "0.5" 
embassy-sync  = "0.8"
embedded-hal  ="1.0"    # uniquement pour les traits InputPin/OutputPin


[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
panic         = "abort"
strip         = true